added 2nd example

--- a/instance.html
+++ b/instance.html
@@ -18,19 +18,38 @@
     </head>
     <body>
 
-        <div data-id="sfdc" class="custom-container">
+        <div data-id="sfdc" class="container custom-instance-1">
             
             <!-- optional, if you want the box to be clickable -->
             <span class="btnhit"></span>
 
-            <div class="custom l-snugbox">
+            <div class="l-snugbox">
                 <span class="l-snugbox-row">
                     <span class="l-snugbox-cell l-snugbox-heading snugbox-heading">
-                        <h2 class="custom">Your heading</h2>
+                        <h2>Custom Instance 1</h2>
                     </span>
                 </span>
                 <span class="l-snugbox-row">
-                    <span class="custom l-snugbox-cell l-snugbox-row-img snugbox-img"></span>
+                    <span class="l-snugbox-cell l-snugbox-row-img snugbox-img"></span>
+                </span>
+            </div>
+
+        </div>
+
+
+        <div data-id="sfdc" class="container custom-instance-2">
+            
+            <!-- optional, if you want the box to be clickable -->
+            <span class="btnhit"></span>
+
+            <div class="l-snugbox">
+                <span class="l-snugbox-row">
+                    <span class="l-snugbox-cell l-snugbox-heading snugbox-heading">
+                        <h2>Custom Instance 2</h2>
+                    </span>
+                </span>
+                <span class="l-snugbox-row">
+                    <span class="l-snugbox-cell l-snugbox-row-img snugbox-img"></span>
                 </span>
             </div>
 
