modified example 2 and got ready for live demo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="l-snugbox">
                 <span class="l-snugbox-row">
                     <span class="l-snugbox-cell l-snugbox-heading snugbox-heading">
-                        <h2>Custom Instance 2</h2>
+                        <h2>Custom Instance 2 - with long name that flows over 2 lines</h2>
                     </span>
                 </span>
                 <span class="l-snugbox-row">
