--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <!-- libs -->
-        <script src="libs/jquery.min.js"></script>
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="libs/modernizr.custom.93380.js"></script>
 
         <!-- scripts -->
